# gmail_zero_app

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
application/: __init__.py
application/dto/: __init__.py  analytics.py  label_operation.py
application/services/: __init__.py  analytics_service.py  label_config_service.py  label_service.py  search_service.py  sync_service.py
config/: __init__.py  labels.toml  oauth_scopes.py  settings.py
domain/: __init__.py  exceptions.py
domain/models/: __init__.py  daily_snapshot.py  label.py  message.py  sync_state.py  thread.py
domain/safety/: __init__.py  constants.py  guard.py
infrastructure/: __init__.py
infrastructure/gmail/: __init__.py  client.py  mapper.py  mock_client.py  oauth.py
infrastructure/persistence/: __init__.py  database.py  models.py
infrastructure/persistence/repositories/: __init__.py  label_repository.py  message_repository.py  snapshot_repository.py  sync_state_repository.py
infrastructure/scheduler/: __init__.py  sync_scheduler.py
presentation/: __init__.py  app.py
presentation/routes/: __init__.py  api.py  main.py
presentation/static/css/: style.css
presentation/templates/: archive.html  base.html  dashboard.html  error.html  inbox.html  search.html  sent.html  settings.html  size.html
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_flask_routes.py  test_sync_pipeline.py
tests/safety/: __init__.py  test_forbidden_operations.py
tests/unit/: __init__.py
tests/unit/application/: __init__.py  test_label_operation_dto.py
tests/unit/domain/: __init__.py  test_domain_models.py  test_safety_guard.py  test_settings.py
tests/unit/infrastructure/: __init__.py  test_gmail_client.py  test_repositories.py
